src/kubernetes/api.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30021
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      containers:
      - name: api
        image: gcr.io/isa-mrs-345117/api:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: 128m
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data/images
          name: api-volume-claim
      volumes:
      - name: api-volume-claim
        persistentVolumeClaim:
          claimName: api-volume-claim
